tdf#95733: SVG: clipPath can be defined outside path...

... so just ignore all clipPath until its support is implemented in filter/source/svg/

Regression introduced by 3056a6b6e39b57c66ebaf5210264b689f02f5fc3.
Verified that tdf#95332 and tdf#65864 are still rendered correctly

Change-Id: Ie3bdee545a81554ef2a95d373e2559e2540ddaa5